--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">MovieFy</string>
+
+    <!-- Tratando possíveis erros de checkin -->
+    <string name="ops">Ops... Alguma coisa aconteceu!!</string>
+    <string name="try_again">Tente novamente mais tarde!!</string>
 </resources>
